force-app/main/default/objects/THOR_Work_Clearance_Historical__c.object
<CustomObject>
    <fields>
        <fullName>AGT__c</fullName>
        <label>AGT</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_or_Bearer_Telephone__c</fullName>
        <label>Applicant or Bearer Telephone</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_or_Bearer__c</fullName>
        <label>Applicant or Bearer</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area_Code__c</fullName>
        <label>Area Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorized_Date_UI__c</fullName>
        <label>Authorized Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Authorized_Date__c</fullName>
        <label>Authorized Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorized_Indicator__c</fullName>
        <label>Authorized Indicator</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorized_Signatory_UI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Authorized Signatory</label>
        <referenceTo>PISUsers__c</referenceTo>
        <relationshipLabel>Work Clearance Historical (Authorized Signatory)</relationshipLabel>
        <relationshipName>Work_Clearance_Historical2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Authorized_Signatory__c</fullName>
        <label>Authorized Signatory</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorized_Signature_UI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Authorized Signature</label>
        <referenceTo>PISUsers__c</referenceTo>
        <relationshipLabel>Work Clearance Historical (Authorized Signature)</relationshipLabel>
        <relationshipName>Work_Clearance_Historical1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Authorized_Signature__c</fullName>
        <label>Authorized Signature</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorized_Time_UI__c</fullName>
        <label>Authorized Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Authorized_Time__c</fullName>
        <label>Authorized Time</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bearer1__c</fullName>
        <label>Bearer1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bearer2__c</fullName>
        <label>Bearer2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bearer3__c</fullName>
        <label>Bearer3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Block_Valv__c</fullName>
        <label>Block Valv</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Block_gas__c</fullName>
        <label>Block gas</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Can_go_wrong1__c</fullName>
        <label>Can go wrong1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Can_go_wrong2__c</fullName>
        <label>Can go wrong2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Can_go_wrong3__c</fullName>
        <label>Can go wrong3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cause1__c</fullName>
        <label>Cause1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cause2__c</fullName>
        <label>Cause2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cause3__c</fullName>
        <label>Cause3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_Date__c</fullName>
        <label>Check Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_Time__c</fullName>
        <label>Check Time</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Applicant_or_Bearer__c</fullName>
        <label>Close Applicant or Bearer</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Authorized_Sign_Indc__c</fullName>
        <label>Close Authorized Sign.Indc</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Authorized_Sign_off_UI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Close Authorized Sign off Name</label>
        <referenceTo>PISUsers__c</referenceTo>
        <relationshipLabel>Work Clearance Historical (Close Authorized Sign off Name)</relationshipLabel>
        <relationshipName>Work_Clearance_Historical3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Close_Authorized_Sign_off__c</fullName>
        <label>Close Authorized Sign.off</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Extend_Applicant_or_Bearer__c</fullName>
        <label>Extend Applicant or Bearer</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extend_Authorized_Sign_Indc__c</fullName>
        <label>Extend Authorized Sign.Indc</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extend_Authorized_Sign__c</fullName>
        <label>Extend Authorized Sign.</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extend_Date__c</fullName>
        <label>Extend Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Extend_No__c</fullName>
        <label>Extend No</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extend_Time_Flag_Formula__c</fullName>
        <formula>IF( Extend_Time_Flag__c == &apos;X&apos;, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extend Time Flag Formula</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Extend_Time_Flag__c</fullName>
        <label>Extend Time Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extend_Time_To__c</fullName>
        <label>Extend Time To</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extend_Time__c</fullName>
        <label>Extend Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>External_Key__c</fullName>
        <externalId>true</externalId>
        <label>External_Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Fire_Watch_Stand_By__c</fullName>
        <label>Fire Watch Stand By</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flamable_amt__c</fullName>
        <label>Flamable amt</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flamable_gas__c</fullName>
        <label>Flamable gas</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FunctionalLocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Functional Location</label>
        <referenceTo>Functional_Location__c</referenceTo>
        <relationshipLabel>Work Clearance Historical</relationshipLabel>
        <relationshipName>Thor_Work_Clearance_Historical</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Functional_Location__c</fullName>
        <formula>IF( ISBLANK(Order__r.Functional_Location__c) , Notification__r.Functional_Location__r.Name, Order__r.Functional_Location__r.Name)</formula>
        <label>Functional Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Message__c</fullName>
        <label>Integration Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Status__c</fullName>
        <label>Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Isolate_Breaker__c</fullName>
        <label>Isolate Breaker</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Isolate_Elec__c</fullName>
        <label>Isolate Elec</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <formula>IF(ISBLANK(Order__r.Location__c), Notification__r.Location__c, Order__r.Location__c)</formula>
        <label>Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lock_off_RCU__c</fullName>
        <label>Lock off RCU</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Work_Center_Text__c</fullName>
        <label>Main Work Center Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Work_Center__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Main Work Center</label>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipName>Thor_Work_Clearance_Historical</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Maintenance_Plant__c</fullName>
        <formula>IF(ISBLANK(Order__r.Maintenance_Plant__c), IF(ISBLANK(Notification__r.Maintenance_Plant__c), FunctionalLocation__r.Maintenance_Plant__r.Name ,Notification__r.Maintenance_Plant__c), Order__r.Maintenance_Plant__c)</formula>
        <label>Maintenance Plant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maintenance_Unit__c</fullName>
        <label>Maintenance Unit</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Notification</label>
        <referenceTo>Notification__c</referenceTo>
        <relationshipName>Thor_Work_Clearance_Historical</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Operation_Stand_by__c</fullName>
        <label>Operation Stand by</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Work Clearance Historical</relationshipLabel>
        <relationshipName>Work_Clearance_Historical</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Oxygen__c</fullName>
        <label>Oxygen</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oxygen_amt__c</fullName>
        <label>Oxygen amt</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPE1__c</fullName>
        <label>PPE1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPE2__c</fullName>
        <label>PPE2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPE3__c</fullName>
        <label>PPE3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPE_Flag__c</fullName>
        <label>PPE Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permit_flag__c</fullName>
        <label>Permit flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planning_Plant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Planning Plant</label>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipName>Thor_Work_Clearance_Historical1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prevent1__c</fullName>
        <label>Prevent1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prevent2__c</fullName>
        <label>Prevent2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prevent3__c</fullName>
        <label>Prevent3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority_Map__c</fullName>
        <formula>IF( ISPICKVAL(Priority__c, &apos;1&apos;) , &apos;Immediately&apos;, 
 IF(ISPICKVAL(Priority__c, &apos;2&apos;) , &apos;Urgent&apos;,  
  IF(ISPICKVAL(Priority__c, &apos;3&apos;), &apos;Normal&apos;,  
   IF(ISPICKVAL(Priority__c, &apos;A&apos;), &apos;Float Time - 1M&apos;,  
    IF(ISPICKVAL(Priority__c, &apos;C&apos;), &apos;Float Time - 3M&apos;,
     IF(ISPICKVAL(Priority__c, &apos;F&apos;), &apos;Float Time - 6M&apos;, 
      IF(ISPICKVAL(Priority__c, &apos;I&apos;), &apos;Float Time - 9M&apos;,
       IF(ISPICKVAL(Priority__c, &apos;L&apos;), &apos;Float Time - 12M&apos;,
        IF(ISPICKVAL(Priority__c, &apos;O&apos;), &apos;Float Time - 15M&apos;,
         IF(ISPICKVAL(Priority__c, &apos;R&apos;), &apos;Float Time - 18M&apos;, &apos;&apos; ) ) ) ) ) ) ) ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority Map</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Immediately</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Urgent</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Normal</label>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                    <label>Float Time - 1M</label>
                </value>
                <value>
                    <fullName>C</fullName>
                    <label>Float Time - 3M</label>
                </value>
                <value>
                    <fullName>F</fullName>
                    <label>Float Time - 6M</label>
                </value>
                <value>
                    <fullName>I</fullName>
                    <label>Float Time - 9M</label>
                </value>
                <value>
                    <fullName>L</fullName>
                    <label>Float Time - 12M</label>
                </value>
                <value>
                    <fullName>O</fullName>
                    <label>Float Time - 15M</label>
                </value>
                <value>
                    <fullName>R</fullName>
                    <label>Float Time - 18M</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Problem__c</fullName>
        <label>Problem</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reduce_Pressure__c</fullName>
        <label>Reduce Pressure</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_UI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requester</label>
        <referenceTo>PISUsers__c</referenceTo>
        <relationshipLabel>Work Clearance Historical</relationshipLabel>
        <relationshipName>Work_Clearance_Historical</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requester__c</fullName>
        <label>Requester</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Safety_Permit1__c</fullName>
        <label>Safety Permit1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Safety_Permit2__c</fullName>
        <label>Safety Permit2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Safety_Permit3__c</fullName>
        <label>Safety Permit3</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sign_off_Flag_Formula__c</fullName>
        <formula>IF( Sign_off_Flag__c == &apos;X&apos;, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sign off Flag Formula</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sign_off_Flag__c</fullName>
        <label>Sign off Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spade_off__c</fullName>
        <label>Spade off</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stop_machine__c</fullName>
        <label>Stop machine</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Status__c</fullName>
        <label>System Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TOP_Supervisor_Telephone__c</fullName>
        <label>TOP Supervisor Telephone</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tag_Out__c</fullName>
        <label>Tag Out</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thaioil_Supervisor_Indicator__c</fullName>
        <label>Thaioil Supervisor/Indicator</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Toxic_PPM__c</fullName>
        <label>Toxic PPM</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Toxic_Type__c</fullName>
        <label>Toxic Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Toxic__c</fullName>
        <label>Toxic</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Status__c</fullName>
        <label>User Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ventilation__c</fullName>
        <label>Ventilation</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Verification_Status__c</fullName>
        <label>Verification Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WBS__c</fullName>
        <label>WBS</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkClearanceId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Clearance Id</label>
        <referenceTo>Work_Clearance__c</referenceTo>
        <relationshipLabel>Work Clearance Historical</relationshipLabel>
        <relationshipName>Work_Clearance_Historical</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Clearance_Description__c</fullName>
        <label>Work Clearance Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Clearance_Status__c</fullName>
        <formula>IF(CONTAINS(System_Status__c, &quot;DLFL&quot;), &quot;Delete Flag&quot;,
    IF(CONTAINS(System_Status__c, &quot;REJC&quot;), &quot;Rejected&quot;,
        IF(CONTAINS(System_Status__c, &quot;CLSD&quot;), &quot;Closed&quot;,
            IF(CONTAINS(System_Status__c, &quot;CLSE&quot;), &quot;Closed&quot;,
                IF(CONTAINS(System_Status__c, &quot;INAC&quot;), &quot;Inactive&quot;,
                    IF(CONTAINS(System_Status__c, &quot;INC&quot;), &quot;Inactive&quot;,
                        IF(CONTAINS(System_Status__c, &quot;CRTE&quot;), &quot;Created&quot;,
                            IF(CONTAINS(System_Status__c, &quot;CRET&quot;), &quot;Created&quot;,
                                IF(CONTAINS(System_Status__c, &quot;PREP&quot;), &quot;In Progress&quot;,
                                    IF(CONTAINS(System_Status__c, &quot;CHNG&quot;), &quot;In Progress&quot;, &quot;&quot;)
                                )
                            )
                        )
                    )
                )
            )
        )
    )
)</formula>
        <label>Work Clearance Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Clearance__c</fullName>
        <label>Work Clearance</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Detail__c</fullName>
        <label>Work Detail</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Work Clearance Historical</label>
    <nameField>
        <label>Work Clearance Historical Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>